# inventory-management-system

./: .dockerignore  .gitignore
logistics-service/: .env.example  Dockerfile  README.md  alembic.ini  compose.yml  main.py  pyproject.toml
logistics-service/migrations/: env.py
logistics-service/migrations/versions/: ad0f50f4830c_add_indexes_to_order_items.py  bccc53e6fcf1_change_id_columns_to_uuid.py  d94e24115e02_change_id_columns_to_uuid.py  ec016f944df1_initial_schema.py
logistics-service/src/logistics/: main.py
logistics-service/src/logistics/api/: dependencies.py
logistics-service/src/logistics/api/v1/: order.py  orders.py  product.py  products.py
logistics-service/src/logistics/core/: config.py  exceptions.py
logistics-service/src/logistics/db/: base.py  session.py
logistics-service/src/logistics/models/: order.py  order_item.py  product.py
logistics-service/src/logistics/repositories/: base.py  order_repository.py  product_repository.py
logistics-service/src/logistics/schemas/: enums.py  order.py  product.py
logistics-service/src/logistics/services/: order_service.py  product_service.py
logistics-service/tests/: conftest.py  test_orders.py
